2002-03-25  wakaba <w@suika.fam.cx>

	* Address.pm, CSV.pm, Params.pm, Unstructured.pm,
	ValueParams.pm: Call hook function for character
	code convertion and decoding encoded-word when
	parse or stringify.

2002-03-23  wakaba <w@suika.fam.cx>

	* Params.pm, ContentType.pm, ContentDisposition.pm,
	ValueParams.pm: New files.

2002-03-21  wakaba <w@suika.fam.cx>

	* CSV.pm: New module.

2002-03-20  wakaba <w@suika.fam.cx>

	* MsgID.pm, Received.pm, Subject.pm: New modules.
	* MsgID/: New directory.

2002-03-16  wakaba <w@suika.fam.cx>

	* Date.pm: Support ISO 8601 (full format), RFC 561/724 
	(slash format).

2002-03-15  wakaba <w@suika.fam.cx>

	* Date.pm: New module.

2002-03-14  wakaba <w@suika.fam.cx>

	* Structured.pm, Unstructured.pm: New modules.

2002-03-13  wakaba <w@suika.fam.cx>

	* Address.pm: New module.
	
	* ChangeLog: New file.