@@ -1,3 +1,7 @@
+2002-03-26  wakaba <w@suika.fam.cx>
+
+	* UA.pm: New module.
+
 2002-03-25  wakaba <w@suika.fam.cx>
 
 	* Address.pm, CSV.pm, Params.pm, Unstructured.pm,
